cabal-version:      >= 1.10
name:               blog
version:            0.1.0.0
description:        Minseo Kim's personal blog

homepage:           https://github.com/kimminss0/blog#readme
license:            MIT
license-file:       LICENSE
author:             Minseo Kim
copyright:          2024-2026 Minseo Kim
build-type:         Simple
extra-doc-files:    README.md

executable site
  main-is:          Main.hs
  hs-source-dirs:   src
  default-language: Haskell2010
  build-depends:    base >= 4.7 && < 5
                  , hakyll >= 4.16 && < 5
                  , pandoc
                  , filepath
                  , time
                  , process
                  , silently
  other-modules:    Site.Compiler
                  , Site.Context
                  , Site.Route
  ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N
